Fix drawer overflow

--- a/components/drawer/drawer.scss
+++ b/components/drawer/drawer.scss
@@ -10,6 +10,7 @@
 	left: 0;
 	top: 0;
 	height: 100%;
+	overflow: auto;
 	transition: translate 200ms;
 	min-width: 20rem;
 	max-width: calc(100% - 5rem);
